--- a/1_Feedforward_Pen_and_Paper/1.1-EXE-FNN-Pen-and-Paper.ipynb
+++ b/1_Feedforward_Pen_and_Paper/1.1-EXE-FNN-Pen-and-Paper.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -158,6 +158,19 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ANS:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "y_j & = h_2(\\sum_{k=0}^M w^{(2)}_{jk}  h_1( \\sum_{i = 0}^D \\ w^{(1)}_{ki}x_i \\  ))\n",
+    "\\end{align}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "bIXe3rGW8EeH"
@@ -168,6 +181,20 @@
     "b) Write the equation for a neural network with two hidden layers and three layers of weights $w=w^{(1)},w^{(2)},w^{(3)}$. Again, without using $a$'s and $z$'s.\n",
     "$$\n",
     "y_j = h_3(\\ldots)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ANS:\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "y_j & = h_3( \\sum_{l = 0}^M w^{(3)}_{jl} h_2(\\sum_{k=0}^M w^{(2)}_{lk}  h_1( \\sum_{i = 0}^D \\ w^{(1)}_{ki}x_i \\  )))\n",
+    "\\end{align}\n",
     "$$"
    ]
   },
@@ -187,6 +214,23 @@
     "z^{(l)}_j & = h_l(\\ldots) & l=1,\\ldots,L \\\\\n",
     "a^{(l)}_j & = \\ldots &  l=2,\\ldots,L \\\\\n",
     "a^{(1)}_j & = \\ldots & \n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ANS:\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "y_j & = h_L(\\sum_{i=0}^M w^{(L)}_{ji} z^{(L-1)}_i ) & \\\\\n",
+    "z^{(l)}_j & = h_l(a^{(l)}_j) & l=1,\\ldots,L-1 \\\\\n",
+    "a^{(l)}_j & = \\sum_{i=0}^M \\ w^{(l)}_{ji}x_i &  l=2,\\ldots,L-1 \\\\\n",
+    "a^{(1)}_j & = \\sum_{i=0}^D \\ w^{(1)}_{ji}x_i \\ \n",
     "\\end{align}\n",
     "$$"
    ]
@@ -367,6 +411,26 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ANS:\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "loss &= -log (\\prod_{n=1}^N  p(\\mathbf{t}_n|\\mathbf{x}_n,w)) \\\\\n",
+    "&=  -log (\\prod_{n=1}^N \\mathcal{N}(\\mathbf{t}_n|\\mathbf{y}(\\mathbf{x}_n),\\sigma^2 \\mathbf{I})) \\\\\n",
+    "&= -log (\\prod_{n=1}^N  \\frac{1}{\\sqrt{2\\pi \\sigma^2}^D} \\exp ( - || \\mathbf{y}(\\mathbf{x}_n) - \\mathbf{t}_n||_2^2 /2\\sigma^2 )) \\\\\n",
+    "&= -N (log (1) - log({\\sqrt{2\\pi \\sigma^2}^D})) + \\frac{E(w)}{2\\sigma^2 } \\\\\n",
+    "&= -N ( 0 - log({{2\\pi \\sigma^2}^{D/2}})) + \\frac{E(w)}{2\\sigma^2 } \\\\\n",
+    "&= \\frac{ND}{2}log({{2\\pi \\sigma^2}}) + \\frac{E(w)}{2\\sigma^2 } \n",
+    "\\end{align} \n",
+    "\n",
+    "\n",
+    "$$\n",
+    "Since logarithms are strictly increasing functions, maximizing the likelihood or its logarithm leads to the same result. However, working with the log-likelihood is more convenient than the original likelihood. By taking the logarithm and multiplying by -1, we can minimize the negative log-likelihood, which is equivalent to maximizing the likelihood."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "sjk_rzBK8EeL"
@@ -415,6 +479,28 @@
     "E(w) = - \\sum_{n=1}^N \\sum_{k=1}^K t_{nk} \\log y_{k}(\\mathbf{x}_n) \\ .\n",
     "$$\n",
     "This is also known as the cross entropy loss. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ANS:\n",
+    "$$\n",
+    "loss = -log (\\prod_{n=1}^N p(\\mathbf{t}_n|\\mathbf{x}_n,w))\n",
+    "$$\n",
+    "$$\n",
+    "= -log (\\prod_{n=1}^N  \\prod_{k=1}^K \\left[ y_k(\\mathbf{x}_n)\\right]^{t_{nk}})\n",
+    "$$\n",
+    "$$\n",
+    "= - \\sum_{n=1}^N log(\\prod_{k=1}^K \\left[ y_k(\\mathbf{x}_n)\\right]^{t_{nk}})\n",
+    "$$\n",
+    "$$\n",
+    "= - \\sum_{n=1}^N \\sum_{k=1}^K log( \\left[ y_k(\\mathbf{x}_n)\\right]^{t_{nk}})\n",
+    "$$\n",
+    "$$\n",
+    "= - \\sum_{n=1}^N \\sum_{k=1}^K t_{nk} log( y_k(\\mathbf{x}_n))\n",
+    "$$"
    ]
   },
   {
@@ -541,6 +627,59 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ANS:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "E(w) &= - \\sum_{k=1}^K t_{k} \\log y_{k}(\\mathbf{x}) \\\\\n",
+    "&= - \\sum_{k=1}^K t_{k} \\log \\frac{\\exp( a^{(L)}_{k})}{\\sum_j \\exp ( a^{(L)}_{j} )} \\\\ \n",
+    "&= - \\sum_{k=1}^K t_{k} a^{(L)}_{k} + \\sum_{k=1}^K t_{k} \\log{\\sum_j \\exp ( a^{(L)}_{j} )} \\\\\n",
+    "\\end{align} \n",
+    "$$\n",
+    "\n",
+    "And because the $ t_{k} $ is one-hot encoding, we will only get the $ \\exp ( a^{(k)}_{j} ) $  value in $ \\sum_j \\exp ( a^{(L)}_{j} ) $ \n",
+    "\n",
+    "$$\n",
+    "E(w) = - \\sum_{k=1}^K t_{k} a^{(L)}_{k} + \\log{ \\sum_{k=1}^K \\exp ( a^{(L)}_{k} )} \\ \n",
+    "$$\n",
+    "\n",
+    "As for $\\delta^{(L)}_j = \\frac{\\partial E(w)}{\\partial a^{(L)}_{j}}$\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\delta^{(L)}_j &= \\frac{\\partial E(w)}{\\partial a^{(L)}_{j}} \\\\\n",
+    "&= \\frac{\\partial (-\\sum_{k=1}^K t_{k} a^{(L)}_{k} +\\log{ \\sum_{k=1}^K \\exp ( a^{(L)}_{k} )} )\\ }{\\partial a^{(L)}_{j}} \\\\\n",
+    "&= \\frac{\\partial (-\\sum_{k=1}^K t_{k} a^{(L)}_{k}) \\ }{\\partial a^{(L)}_{j}} + \\frac{\\partial (log{ \\sum_{k=1}^K \\exp ( a^{(L)}_{k} )} ) }{\\partial a^{(L)}_{j}}\n",
+    "\\end{align} \n",
+    "$$\n",
+    "\n",
+    "\n",
+    "We take a closer look for two terms in equation(3)\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "1. \\frac{\\partial (-\\sum_{k=1}^K t_{k} a^{(L)}_{k}) \\ }{\\partial a^{(L)}_{j}} &= 0 + 0 + ....+ \\frac{\\partial (- t_{j} a^{(L)}_{j}) \\ }{\\partial a^{(L)}_{j}} \\\\\n",
+    "&= - t_{j} * 1 \n",
+    "\\end{align} \n",
+    "$$\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "2. \\frac{\\partial (log{ \\sum_{k=1}^K \\exp ( a^{(L)}_{k} )} ) }{\\partial a^{(L)}_{j}} &= \\left. \\frac{\\partial log(g)}{\\partial g} \\right|_{g=\\sum_{k=1}^K \\exp ( a^{(L)}_{k})} \\frac{\\partial \\sum_{k=1}^K \\exp ( a^{(L)}_{k})}{\\partial a^{(L)}_{j}} \\\\\n",
+    "&= \\left. \\frac{1}{g} \\right|_{g=\\sum_{k=1}^K \\exp ( a^{(L)}_{k})} * (0 + 0 + ....+ \\frac{\\partial (\\exp ( a^{(L)}_{j})) }{\\partial a^{(L)}_{j}}) \\\\\n",
+    "&= \\frac{1}{\\sum_{k=1}^K \\exp ( a^{(L)}_{k})} * \\exp ( a^{(L)}_{j}) \\\\\n",
+    "&=  \\frac{\\exp ( a^{(L)}_j )}{\\sum_k \\exp ( a^{(L)}_k )} \\\\\n",
+    "&= y_j\n",
+    "\n",
+    "\\end{align} \n",
+    "$$\n",
+    "From the calculation we've done, in the end, we get\n",
+    "$$\n",
+    "\\delta^{(L)}_j = \\frac{\\partial (-\\sum_{k=1}^K t_{k} a^{(L)}_{k}) \\ }{\\partial a^{(L)}_{j}} + \\frac{\\partial (log{ \\sum_{k=1}^K \\exp ( a^{(L)}_{k} )} ) }{\\partial a^{(L)}_{j}} = - t_{j} + y_j\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "rP69UTWV8EeQ"
@@ -593,6 +732,48 @@
     "\\delta^{(l)}_j & = \\sum_{k=1}^K \\delta^{(l+1)}_k  w^{(l+1)}_{kj} h_{l}'(a^{(l)}_j) \n",
     "\\end{align}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We got \n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\frac{\\partial E(w)}{\\partial w^{(L-1)}_{ji}} & = \\delta^{(L-1)}_j \\ z^{(L-2)}_i  \\\\\n",
+    "\\delta^{(L-1)}_j & = \\frac{\\partial E(w)}{\\partial a^{(L-1)}_{j}} \\\\\n",
+    "\\end{align}\n",
+    "$$ \n",
+    "from previous calculation.\n",
+    "Now let $l = L-1$ and the two equations will become to\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\delta^{(l)}_j  & = \\frac{\\partial E(w)}{\\partial a^{(l)}_{j}} \\\\\n",
+    "\\frac{\\delta^{(l)}_j \\partial a^{(l)}_{j}}{\\partial w^{(l)}_{ji}} & = \\frac{\\partial E(w)}{\\partial w^{(l)}_{ji}} \n",
+    "\\end{align}\n",
+    "$$\n",
+    "Since $a^{(l)}_{k} = \\sum_i w^{(l)}_{ki} z^{l-1)}_i$\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\frac{\\partial E(w)}{\\partial w^{(l)}_{ji}} & = \\delta^{(l)}_j  z^{(l-1)}_i \n",
+    "\\end{align}\n",
+    "$$\n",
+    "and this can apply to any $l$ recursively whenever $l < L$ using the chain rule and the same structure. \n",
+    "\n",
+    "\n",
+    "As for $\\delta^{(l)}_j = \\sum_{k=1}^K \\delta^{(l+1)}_k  w^{(l+1)}_{kj} h_{l}'(a^{(l)}_j)$, we got \n",
+    "$\\frac{\\partial E(w)}{\\partial w^{(l)}_{ji}} = \\sum_{k=1}^K \\delta^{(l+1)}_k  w^{(l+1)}_{kj} h_{l}'(a^{(l)}_j) z^{(l-1)}_i \\ $ and also $\\frac{\\partial E(w)}{\\partial w^{(l)}_{ji}} = \\delta^{(l)}_j  z^{(l-1)}_i $ from previous argument,\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\frac{\\partial E(w)}{\\partial w^{(l)}_{ji}} &= \\delta^{(l)}_j  z^{(l-1)}_i = \\sum_{k=1}^K \\delta^{(l+1)}_k  w^{(l+1)}_{kj} h_{l}'(a^{(l)}_j) z^{(l-1)}_i  \\\\\n",
+    "\\delta^{(l)}_j  z^{(l-1)}_i &= \\sum_{k=1}^K \\delta^{(l+1)}_k  w^{(l+1)}_{kj} h_{l}'(a^{(l)}_j) z^{(l-1)}_i \\\\\n",
+    "\\delta^{(l)}_j   &= \\sum_{k=1}^K \\delta^{(l+1)}_k  w^{(l+1)}_{kj} h_{l}'(a^{(l)}_j) \n",
+    "\\end{align}\n",
+    "$$\n",
+    "So in the end, we can also argue that $\\delta^{(l)}_j = \\sum_{k=1}^K \\delta^{(l+1)}_k  w^{(l+1)}_{kj} h_{l}'(a^{(l)}_j) $ and this $l= L -1$ can be $ L-2, L-3, L-4...$ recursively when $l < L$.\n",
+    "\n"
    ]
   },
   {
@@ -668,7 +849,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
